fingerprint add  text

--- a/index.html
+++ b/index.html
@@ -520,6 +520,12 @@
             <label>Security hint (optional)</label>
             <input id="securityHint" placeholder="e.g. Mother's name" />
           </div>
+<div style="margin-top:0.6rem;">
+  <button id="enableBiometricBtn" class="btn-secondary">
+    Enable fingerprint unlock
+  </button>
+  <div id="biometricStatus" class="modal-status"></div>
+</div>
 
           <div style="margin-top:0.5rem;">
             <label><input id="biometricEnabled" type="checkbox" /> Prefer biometric unlock (device support only)</label>
